--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/profile.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="Rahul Dhola "
-      content="Software Developer"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/Rahul1.jpg" />
+     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- SEO: Title & Description -->
+    <title>Rahul Dhola | Frontend Developer Portfolio</title>
+    <meta name="description" content="Portfolio of Rahul Dhola, a React frontend developer with expertise in real-time apps, chatbots, WebSocket, and modern UI design." />
+
+    <!-- Keywords for search -->
+    <meta name="keywords" content="Rahul Dhola, frontend developer, React developer, portfolio, chatbot app, WebSocket, real-time messaging" />
+
+    <!-- Author -->
+    <meta name="author" content="Rahul Dhola" />
+
+    <!-- Open Graph for social sharing -->
+    <meta property="og:title" content="Rahul Dhola | React Frontend Developer" />
+    <meta property="og:description" content="View my portfolio showcasing chatbot apps, real-time systems, and frontend UI projects." />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.jpg" /> <!-- Add image in public folder -->
+    <meta property="og:url" content="https://your-vercel-url.vercel.app" />
+    <meta property="og:type" content="website" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +37,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rahul</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
