--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Rahul Dhola | React Frontend Developer" />
     <meta property="og:description" content="View my portfolio showcasing chatbot apps, real-time systems, and frontend UI projects." />
     <meta property="og:image" content="%PUBLIC_URL%/preview.jpg" /> <!-- Add image in public folder -->
-    <meta property="og:url" content="https://your-vercel-url.vercel.app" />
+    <meta property="og:url" content="https://rahuldhola.vercel.app" />
     <meta property="og:type" content="website" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
