--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/preview.jpg" /> <!-- Add image in public folder -->
     <meta property="og:url" content="https://rahuldhola.vercel.app" />
     <meta property="og:type" content="website" />
+    <meta name="google-site-verification" content="DtW4lzRgB9Tb6kDKRQcd2STwUZLgUWfMiKEYYt2NoK4" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
