--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="icon" href="%PUBLIC_URL%/Rahul1.jpg" />
-     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <!-- SEO: Title & Description -->
-    <title>Rahul Dhola | Frontend Developer Portfolio</title>
-    <meta name="description" content="Portfolio of Rahul Dhola, a React frontend developer with expertise in real-time apps, chatbots, WebSocket, and modern UI design." />
 
-    <!-- Keywords for search -->
-    <meta name="keywords" content="Rahul Dhola, frontend developer, React developer, portfolio, chatbot app, WebSocket, real-time messaging" />
+<head>
+  <link rel="icon" href="%PUBLIC_URL%/Rahul1.jpg" />
 
-    <!-- Author -->
-    <meta name="author" content="Rahul Dhola" />
+  <!-- SEO: Title & Description -->
+  <title>Rahul Dhola | Frontend Developer Portfolio</title>
+  <meta name="description"
+    content="Rahul Dhola - Frontend developer with 1.5+ years experience in React, real-time chat apps, WebSocket notifications, and chatbot UIs. View projects, skills, and contact info.">
 
-    <!-- Open Graph for social sharing -->
-    <meta property="og:title" content="Rahul Dhola | React Frontend Developer" />
-    <meta property="og:description" content="View my portfolio showcasing chatbot apps, real-time systems, and frontend UI projects." />
-    <meta property="og:image" content="%PUBLIC_URL%/preview.jpg" /> <!-- Add image in public folder -->
-    <meta property="og:url" content="https://rahuldhola.vercel.app" />
-    <meta property="og:type" content="website" />
-    <meta name="google-site-verification" content="DtW4lzRgB9Tb6kDKRQcd2STwUZLgUWfMiKEYYt2NoK4" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Keywords for search -->
+  <meta name="keywords"
+    content="Rahul Dhola, frontend developer, React developer, portfolio, chatbot app, WebSocket, real-time messaging" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+  <!-- Author -->
+  <meta name="author" content="Rahul Dhola" />
+
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="Rahul Dhola | React Frontend Developer" />
+  <meta property="og:description"
+    content="View my portfolio showcasing chatbot apps, real-time systems, and frontend UI projects." />
+  <meta property="og:image" content="%PUBLIC_URL%/Rahul1.jpg" /> <!-- Add image in public folder -->
+  <meta property="og:url" content="https://rahuldhola.vercel.app" />
+  <meta property="og:type" content="website" />
+  <meta name="google-site-verification" content="DtW4lzRgB9Tb6kDKRQcd2STwUZLgUWfMiKEYYt2NoK4" />
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -38,11 +42,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -52,5 +57,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
